--- a/css/styles.css
+++ b/css/styles.css
@@ -1,12 +1,13 @@
 /*This portfolio applies colour plattes are as follows:*/
 /*
-white: rgba(255, 255, 255, 0.921);
+white: rgb(255, 255, 255);
 light pink: rgba(255, 215, 237, 0.168);
 margenta: rgb(253, 75, 173);
 light blue: rgba(130, 159, 228, 0.099);
 blue: rgba(26, 80, 206, 0.687);
 dark blue: rgba(20, 62, 160, 0.857);
 */
+
 
 /* CSS Styling: Body */
 body {
@@ -20,7 +21,7 @@ body img {
 }
 
 /* CSS Styling: Navigation */
-nav {
+#contact nav {
     position: relative;
     font-size: 1vw;
 }
@@ -101,8 +102,8 @@ h1 {
     width: 13vw;
     display: flex;
     justify-content: space-between;
-    padding: 0vw 1vw;
-    margin: 5vw 0vw;
+    padding: 0vw 1vw 1vw 1vw;
+    margin: 3vw 0vw;
   }
 
 .aboutcontent p {
@@ -113,6 +114,33 @@ h1 {
     justify-content: space-between;
     color: rgba(20, 62, 160, 0.857);
     line-height: 1.7;
+  }
+
+.column:after {
+    content: "";
+    flex: 50%;
+    clear: both;
+  }
+
+/* CSS Styling: Number Text by Pressing Button */
+#txt-counter {
+    height: 0.5vw;
+    width: auto;
+    padding: 1.5vw 0vw 0vw 2.3vw;
+    margin: 1vw 0vw 0.5vw 0vw;
+    color: rgb(253, 75, 173);
+    font-weight: bold;
+    font-size: 1.3vw;
+}
+
+.othersubtitle {
+    margin-top:1.3rem;
+    margin-bottom: 0rem;
+    padding: 0.3rem;
+    background-color: rgba(26, 80, 206, 0.687);
+    color: rgb(255, 255, 255);
+    font-family: Copperplate, fantasy;
+    font-size: 3vw;
   }
 
 /* CSS Styling: Hobbies */
@@ -150,6 +178,7 @@ h1 {
 }
 
 /* CSS Styling: Goals */
+
 .goalscontent p {
     border-radius: 2vw;
     background-color: rgba(255, 215, 237, 0.168);
@@ -224,6 +253,55 @@ h1 {
     font-size: 1.5vw;
 }
 
+/* CSS Styling: Ordered List Table */
+.number-grid p{
+    margin:1.3rem 0.5rem 0.5rem 0.5rem;
+    padding: 0.5rem;
+    background-color: rgba(26, 80, 206, 0.687);
+    color: rgb(255, 255, 255);
+    font-family: Copperplate, fantasy;
+    font-size: 3vw;
+}
+#numbers {
+    list-style: none;
+    display: grid;
+    text-align: center;
+    margin: 0vw 0vw 1vw 17vw;
+    padding: 1vw;
+    grid-template-columns: repeat(10, 5vw);
+    grid-auto-rows: repeat(10, 3vw);
+    background-color: transparent;
+}
+#numbers li:nth-child(odd){
+    background-color: rgba(20, 62, 160, 0.857);
+    color: white;
+    align-self: center;
+    font-family: Arial, sans-serif;
+}
+#numbers li:nth-child(even){
+    background-color: rgb(253, 75, 173);
+    color: rgb(255, 255, 255);
+    font-family: Arial, sans-serif;
+    align-items: center;
+}
+.btn-number {
+    background-color: rgba(26, 80, 206, 0.687);
+    color: rgb(255, 255, 255);
+    border-color: none;
+}
+td:nth-child(even), th:nth-child(even) {
+    background-color: rgb(253, 75, 173);
+    color: rgb(255, 255, 255);
+    font-family: Arial, sans-serif;
+    text-align: center;
+  }
+td:nth-child(odd), th:nth-child(odd) {
+    background-color: rgba(20, 62, 160, 0.857);
+    color: rgb(255, 255, 255);
+    font-family: Arial, sans-serif;
+    text-align: center;
+  }
+
 /* CSS Styling: Page Up Button */
 
 .pageup {
@@ -261,7 +339,6 @@ footer {
   }
 
 /* CSS Styling: Responsive Screen Sizes with background colour changes */
-
 /* Extra small devices (phones, 600px and down) */
 @media only screen and (max-width: 600px) {
     body {background: rgba(255, 215, 237, 0.093);}
